--- a/.config
+++ b/.config
@@ -6417,7 +6417,12 @@ CONFIG_PACKAGE_wol=y
 # CONFIG_PACKAGE_wwan is not set
 # CONFIG_PACKAGE_xfrm is not set
 # CONFIG_PACKAGE_xinetd is not set
-CONFIG_PACKAGE_xray-core=y
+# Changed by J 22.6.12 
+# Because of error:
+# * check_conflicts_for: The following packages conflict with sagernet-core:
+# * check_conflicts_for: 	xray-core * 
+# CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_xray-core=n
 # end of Network
 
 #
